docs: 前端需要支持markdown浏览